--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^3.8.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.11",
