--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-dom": "^18.0.5",
     "@types/recharts": "^1.8.23",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^3.8.0",
     "firebase": "^9.9.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
