--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "@mui/x-date-pickers-pro": "^5.0.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "bootstrap": "^5.2.0",
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^3.8.0",
+    "dayjs": "^1.11.5",
     "firebase": "^9.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
