--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^3.8.0",
     "dayjs": "^1.11.5",
     "firebase": "^9.9.0",
+    "material-ui-popup-state": "^5.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.2.0",
